--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,10 +1,69 @@
 .nav-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1.5rem;
 }
 
 .logo {
+  cursor: pointer;
+}
+
+.font-select {
+  all: unset;
+  cursor: pointer;
+  margin-right: 1.5rem;
+  padding: 0.5rem;
+  border-right: 1px solid var(--light-grey2);
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+.font-select p {
+    margin: 0 0.5rem 0 0;
+}
+
+.font-select svg path {
+    stroke: var(--dark2);
+    margin-left: 0.5rem;
+}
+
+.font-select svg.dark path {
+    stroke: var(--pinkish-purple);
+}
+.select-container {
+    position: relative;
+    display: inline-block;
+}
+.font-list {
+    list-style: none;
+    position: absolute;
+    right: 1.75rem;
+    background-color: var(--white);
+    color: #000;
+    border: 1px solid var(--light-grey2);
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+    z-index: 1;
+    width: 7rem;
+    transition: 0.3s;
+    box-shadow:  0px 0.25rem 1.85rem rgba(0, 0, 0, 0.1);
+}
+.close {
+    display: none;
+}
+.font-list li {
+    margin: 1rem;
     cursor: pointer;
+    font-weight: 700;
+}
+
+.font-list li:hover {
+    color: var(--pinkish-purple);
+}
+
+.font-list.dark {
+    background-color: var(--dark1);
+    color: var(--white);
+    box-shadow: 0 0.25rem 1.85rem #A445ED;
 }
