add search formcontrol, validators, some styles + routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<div class="outer-app-container" [ngClass]="{darkmode: darkmode}">
+<div id="outer-app-container" [ngClass]="{darkmode: darkmode}">
   <div class="app-container">
     <app-navbar></app-navbar>
+    <router-outlet></router-outlet>
   </div>
 </div>
 
