--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,28 +1,30 @@
 @import "../variables.css";
 
-.outer-app-container {
+#outer-app-container {
   display: flex;
   min-height: 100vh;
   width: 100%;
   transition: 0.3s;
 }
-.outer-app-container.darkmode {
-    transition: 0.3s;
+#outer-app-container.darkmode {
+  transition: 0.3s;
   background-color: var(--black);
+  color: var(--white);
 }
+
 .app-container {
   margin: 1.5rem;
   width: 100%;
 }
 
-@media(min-width: 768px) {
-    .app-container {
-        margin: 3rem 2.5rem;
-    }
+@media (min-width: 768px) {
+  .app-container {
+    margin: 3rem 2.5rem;
+  }
 }
 
-@media(min-width: 1024px) {
-    .app-container {
-        margin: 3rem 21rem;
-    }
+@media (min-width: 1024px) {
+  .app-container {
+    margin: 3rem 21rem;
+  }
 }
