add word header w/ audio + change font from navbar

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -28,7 +28,7 @@
           <li
             *ngFor="let font of fonts"
             class="{{ font.class }}"
-            (click)="changeFont(font.font)"
+            (click)="changeFont(font)"
           >
             {{ font.font }}
           </li>
