--- a/src/app/components/word/word.component.html
+++ b/src/app/components/word/word.component.html
@@ -1,3 +1,9 @@
+<div *ngIf="isError" class="error-message">
+  <h2>{{error.emoji}}</h2>
+  <h3>{{error.title}}</h3>
+  <h4>{{error.message}}{{error.resolution}}</h4>
+</div>
+<div *ngIf="!isError">
 <div
   class="word-container"
   [ngClass]="{ darkmode: darkmode }"
@@ -58,4 +64,5 @@
       <img src="../../../assets/external_link.svg" alt="external_link" />
     </a>
   </p>
+</div>
 </div>
